# chunk-your-skills

./: .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  Cargo.toml  DEV.md  LIMITATIONS.md  MIGRATION.md  README.md  build.rs  cbindgen.toml  chunk_your_skills.h  deny.toml  package-lock.json  typos.toml
.ast-grep/rules/: no-print-statements.yaml
.github/workflows/: ci.yml  e2e-published-crates.yml  e2e-published-go-c.yml  e2e-published-npm.yml  e2e-published-pypi-sdk.yml  e2e-published-sdk.yml  publish-c-ffi.yml  publish-crates.yml  publish-npm-sdk.yml  publish-pypi-sdk.yml  sdk-c-go.yml
examples/: README.md  _cli.sh  decompose.sh  recompose.sh
examples/context7/: SKILL.md
examples/context7/decomposed/nodes/: n0.md  n1.md  n2.md  n3.md  n4.md  n5.md  n6.md  n7.md  n8.md  page_index.json
examples/context7/decomposed/skills/retrieve/original/: SKILL.md
examples/context7/recomposed/context7/: SKILL.md
examples/context7/skinny-skill/activation/: SKILL.md
examples/context7/skinny-skill/fetch-workflow/: SKILL.md
examples/context7/skinny-skill/guidelines-only/: SKILL.md
examples/context7/skinny-skill/mixed-nodes/: SKILL.md
examples/context7/skinny-skill/step1-skeleton/: SKILL.md
examples/context7/skinny-skill/steps-1-and-3/: SKILL.md
examples/go-git-smoke/: .gitignore  README.md  ensure-ffi.sh  go.mod.in  main.go  prepare.sh  run.sh
scripts/: all-fallow.sh  check_agent_imports.py  check_cyt_client_imports.py  check_no_legacy_prefix.sh  go-sdk-precommit.sh  local-dev-lib.sh  local-dev.sh  prek-loop.sh  psscriptanalyzer-docker.sh  publish-crates.sh  publish-git.sh  publish-npm.sh  publish-pypi.sh  publish.sh  sync-version.sh  top_tools_by_enums.py  top_tools_by_optional.py
sdk/: Taskfile.yml
sdk/c/: CMakeLists.txt  README.md
sdk/c/cmake/: CYSConfig.cmake.in  CYTConfig.cmake.in
sdk/c/examples/: basic.c  common.h  error_handling.c  skills.c
sdk/c/include/: chunk_your_skills.h
sdk/c/scripts/: build-c-lib.sh
sdk/e2e/: README.md
sdk/e2e/c/tests/: registry_smoke.c
sdk/e2e/clear-your-tools/: pyproject.toml.in
sdk/e2e/clear-your-tools/tests/: test_cyt_client_hook_smoke.py  test_registry_smoke.py
sdk/e2e/fixtures/: bm25_catalog.json  cohesion_config.json  cohesion_sample.md
sdk/e2e/go/: go.mod.in  registry_smoke_test.go  registry_smoke_test.go.in
sdk/e2e/python/: pyproject.toml.in
sdk/e2e/python/tests/: test_registry_smoke.py
sdk/e2e/rust/: Cargo.toml.in
sdk/e2e/rust/tests/: registry_smoke.rs
sdk/e2e/scripts/: build-staging-c-lib.sh  ensure-release-native.sh  parse-version.sh  prepare-release-checkout.sh  render-manifests.sh  resolve-version-from-parent.sh  run-all.sh  run-local.sh  run-target.sh  uv-sync-with-retry.sh  wait-registry.sh
sdk/e2e/typescript/: package.json.in  tsconfig.json
sdk/e2e/typescript/test/: example-file.test.mjs  example-snapshot.mjs  registry-smoke.test.mjs  run.mjs
sdk/go/: README.md  cache.go  cgo_lib.go  chunkyourskills.go  chunkyourskills_test.go  go.mod  pageindex.go  pageindex_incremental.go  tokens.go  tokens_batch.go  version.go
sdk/go/cmd/chunk-native-ensure/: main.go  main_test.go  module.go  triplet.go
sdk/go/moduleversion/: version.go
sdk/go/scripts/: prepare-windows-cgo.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/chunk_your_skills/: __init__.py  _native.pyi  cache.py  pageindex.py  tokens.py  version.py
sdk/python/tests/: test_cache_inline_skills.py  test_pageindex.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: cache.ts  index.ts  native.ts  pageindex.ts  types.ts
sdk/typescript/src/test/: skills-builder.test.ts  smoke.test.ts
src/: README.md  cache_node.rs  cache_python.rs  lib.rs  node.rs  pageindex_node.rs  pageindex_python.rs  paths.rs  python.rs  skills_builder.rs  skills_io.rs  tokens_node.rs  tokens_python.rs
src/bindings/: cbindgen_stubs.rs  manifest.rs
src/cache/: config.rs  disk_writer.rs  fallback_tests.rs  hot.rs  lock.rs  lru.rs  manifest.rs  materialize.rs  memory_tests.rs  mod.rs  skills_registry.rs  test_guard.rs
src/ffi/: cache.rs  error.rs  json_util.rs  memory.rs  mod.rs  pageindex.rs  paths.rs
src/pageindex/: build.rs  cache_layout.rs  config.rs  decompose.rs  document_json.rs  index.rs  mod.rs  node_id.rs  parse.rs  reconstruct.rs  retrieve.rs  skills_repair.rs  spec_refs.rs  tree.rs  types.rs
tests/: ffi_smoke.rs  skills_integration.rs
