[package]
name = "chunk-your-skills"
version = "1.0.0"
edition = "2024"
authors = ["Damien Berezenko"]
description = "Decompose agent SKILL.md files into page-indexed nodes and recompose skinny skills"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/qdrddr/chunk-your-skills"
keywords = ["skills", "markdown", "pageindex", "agents"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "assets/",
]

[lib]
name = "chunk_your_skills"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "chunk-your-skills"
path = "src/bin/chunk-your-skills.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = []
python = ["pyo3", "pythonize"]
node = ["napi", "napi-derive"]
ffi = []

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
napi = { version = "3", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "3", optional = true, features = ["type-def"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py312"], optional = true }
pythonize = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tiktoken-rs = "0.12"

[build-dependencies]
cbindgen = "0.29"
napi-build = "2"

[[test]]
name = "ffi_smoke"
path = "tests/ffi_smoke.rs"
required-features = ["ffi"]
