[project]
name = "chunk-your-skills"
version = "1.0.1"
description = "Python SDK for chunk-your-skills — SKILL.md pageindex and skinny-skill recomposition"
requires-python = ">=3.13,<4.0"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Damien Berezenko" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../Cargo.toml"
features = ["python"]
module-name = "chunk_your_skills._native"
python-source = "src"

[dependency-groups]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportExplicitAny = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
